Projects part 2: double click event, close tabs before opening

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                 </p>
             </div>
             <div class="items"></div>
+            <div class="panel-block bottom">
+                <button class="button is-link is-outlined is-fullwidth close-proj">
+                    Снять выделение
+                </button>
+            </div>
         </div>
     </nav>
 
