--- a/index.html
+++ b/index.html
@@ -201,9 +201,11 @@
                     <li><b>Правая</b> кнопка на блоке (зажать и двигать) — изменить размер</li>
                     <li><b>Ctrl+Правая</b> кнопка на блоке — переименовать</li>
                     <li><b>Колесо</b> на блоке — проиграть звук</li>
-                    <li><b>Левая</b> кнопка на пустой области (зажать и двигать) — выделение блоков</li>
+                    <li><b>Shift+Левая</b> кнопка на странице (зажать и двигать) — выделение блоков</li>
                     <li><b>Delete</b> — удаление выделенных блоков в колоду</li>
                     <li><b>Левая</b> кнопка на звуке в колоде (<b>двойной клик</b>) — добавить звук в пустое место</li>
+                    <li><b>Alt+S</b> — сохранить вкладки в текущий проект
+                    <li><b>Shift+Alt+S</b> — сохранить вкладки как новый проект
                 </ul>
 
                 <h3>Добавление файлов/папок из проводника (drag'n'drop)</h3>
