Move info panel to tooltips

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <div class="about"><i class="fa fa-phone-volume"></i>
             Технопранк-плеер by <span class="author">Nik</span>
         </div>
+        <div class="info">
+            <a class="panel-block" id="settings"><i class="fa fa-gear"></i> Настройки</a>
+            <a class="panel-block" id="about"><i class="fa fa-question-circle"></i> О программе</a>
+        </div>
         <div class="pages" id="page-search">
             <p class="panel-heading">Страницы</p>
             <div class="panel-search field has-addons">
@@ -109,18 +113,9 @@
                 Очистить
             </button>
         </div>
-        <div class="info" id="info">
-            <p class="panel-heading">Информация</p>
-            <div class="items">
-                <a class="panel-block" id="set-device" title="Выбрать устройство вывода звука"><i class="fa fa-gear"></i> Устройство вывода</a>
-                <a class="panel-block" id="show-help" title="Справка по плееру"><i class="fa fa-question-circle"></i> Помощь</a>
-                <a class="panel-block" id="discord" title="Обсуждение в #grinch-player"><i class="fa fa-discord-alt"></i> Discord</a>
-                <a class="panel-block" id="youtube" title="Канал Гринча"><i class="fa fa-youtube-play"></i> ArsenalGrinch</a>
-            </div>
-        </div>
         <div class="edit-mode">
             <div class="panel-heading edit">
-                <i class="fa fa-plus-square-o"></i> Добавить
+                Добавить
             </div>
             <div class="buttons edit">
                 <button class="button" id="add-sound" title="Добавить файлы в колоду"><i class="fa fa-file-o"></i> Файлы</button>
@@ -129,7 +124,7 @@
                 <button class="button" id="add-ppx" title="Добавить все PPv2 страницы в папках"><i class="fa fa-tty"></i> Nx PPv2</button>
             </div>
             <div class="panel-heading edit">
-                <i class="fa fa-table"></i> Страница
+                Страница
             </div>
             <div class="buttons edit">
                 <button class="button" id="remove-main" title="Очистить страницу"><i class="fa fa-window-close-o"></i> Удалить</button>
