Paste sounds to deck, optimise copying, update readme

--- a/index.html
+++ b/index.html
@@ -196,11 +196,14 @@
                     <li><b>Правая</b> кнопка на блоке (зажать и двигать) — изменить размер</li>
                     <li><b>Ctrl+Правая</b> кнопка на блоке — переименовать</li>
                     <li><b>Колесо</b> на блоке — проиграть звук</li>
-                    <li><b>Shift+Левая</b> кнопка на странице (зажать и двигать) — выделение блоков</li>
-                    <li><b>Delete</b> — удаление выделенных блоков в колоду</li>
+                    <li><b>Shift+Левая</b> кнопка на странице или в колоде (зажать и двигать) — выделение</li>
+                    <li><b>Delete</b> — удаление выделенных звуков (в колоду или из базы)</li>
                     <li><b>Левая</b> кнопка на звуке в колоде (<b>двойной клик</b>) — добавить звук в пустое место</li>
                     <li><b>Alt+S</b> — сохранить вкладки в текущий проект
                     <li><b>Shift+Alt+S</b> — сохранить вкладки как новый проект
+                    <li><b>Ctrl+C</b> — скопировать звуки со страницы или из колоды
+                    <li><b>Ctrl+X</b> — вырезать звуки со страницы или из колоды
+                    <li><b>Ctrl+V</b> — вставить звуки на страницу или в колоду
                 </ul>
 
                 <h3>Добавление файлов/папок из проводника (drag'n'drop)</h3>
