--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <li><b>Ctrl+S</b> — сохранить базу вручную
                     <li><b>+/−</b> или <b>Ctrl+Колесо</b> — зум, масштабирование интерфейса</li>
                     <li>Цифры <b>1, 2, 3, 4, 5, 6, 7, 8, 9, 0</b> — быстрое переключение табов (1-10)</li>
-                    <li>Буквы <b>q, w, e, r, t, y, ..., n, m</b> — быстрое переключение табов (11-35)</li>
+                    <li>Буквы <b>q, w, e, r, t, y, u, i, o, p</b> — быстрое переключение табов (11-20)</li>
                     <li><b>Ctrl+W</b> — закрыть текущий таб
                     <li><b>Правая</b> кнопка на странице (нажать) — пауза или продолжение воспроизведения звука</li>
                     <li><b>Левая</b> кнопка в навигаторе страниц (зажать и перенести на вкладки) — открыть страницу
