Fix search icon and deck item counters, add hotkey to close all tabs

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                     <li>Цифры <b>1, 2, 3, 4, 5, 6, 7, 8, 9, 0</b> — быстрое переключение табов (1-10)</li>
                     <li>Буквы <b>q, w, e, r, t, y, u, i, o, p</b> — быстрое переключение табов (11-20)</li>
                     <li><b>Ctrl+W</b> — закрыть текущий таб
+                    <li><b>Ctrl+Alt+W</b> — закрыть все табы (и снять выделение с проекта)
                     <li><b>Правая</b> кнопка на странице (нажать) — пауза или продолжение воспроизведения звука</li>
                     <li><b>Левая</b> кнопка в навигаторе страниц (зажать и перенести на вкладки) — открыть страницу
                     <li><b>Левая</b> кнопка в навигаторе страниц (<b>двойной клик</b>) — открыть страницу</li>
