Don't save progress bars when caching html, update readme

--- a/index.html
+++ b/index.html
@@ -163,10 +163,11 @@
                     <li>Режим <b>редактирования</b> — позволяет редактировать страницы и блоки
                     <li>Режим <b>воспроизведения</b> — для проигрывания звуков
                     <li><b>Страница</b> — главная область по центру (с сеткой в режиме редактирования)
+                    <li><b>Проект</b> — набор страниц
                     <li><b>Блок</b> — прямоугольник с текстом, соответствующий звуку
                     <li><b>Таб</b> — заголовок страницы вверху экрана (для переключения)
                     <li><b>Колода</b> — правая панель с добавленными, но не размещенными на странице звуками
-                    <li><b>Навигатор</b> — левая панель со списком страниц и другой информацией
+                    <li><b>Навигатор</b> — левая панель со списком страниц и проектов
                     <li><b>PPv2</b> — Prank Player v2, старый плеер для технопранков (by Pyro)
                     <li>Поддерживаемые <b>форматы аудио</b>:<br>MP3, MPEG, OPUS, OGG, OGA, WAV, AAC, CAF, M4A, MP4, WEBA, WEBM, DOLBY, FLAC</li>
                 </ul>
@@ -182,7 +183,7 @@
                     <li><b>Ctrl+Alt+W</b> — закрыть все табы (и снять выделение с проекта)
                     <li><b>Правая</b> кнопка на странице (нажать) — пауза или продолжение воспроизведения звука</li>
                     <li><b>Левая</b> кнопка в навигаторе страниц (зажать и перенести на вкладки) — открыть страницу
-                    <li><b>Левая</b> кнопка в навигаторе страниц (<b>двойной клик</b>) — открыть страницу</li>
+                    <li><b>Левая</b> кнопка в навигаторе (<b>двойной клик</b>) — открыть страницу или проект</li>
                     <li><b>Правая</b> кнопка на звуке в колоде — воспроизвести звук</li>
                 </ul>
 
