Brush mode for applying colors on click and on click and drag

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="buttons edit color">
                 <button class="button" id="color-choose" title="Выбрать цвет"><i class="fa fa-delicious"></i> Цвет</button>
                 <button class="button apply" id="color-apply" title="Применить цвет к выделенным"><i class="fa fa-check"></i></button>
-                <button class="button" id="color-brush" title="Режим рисования"><i class="fa fa-paint-brush"></i> Кисть</button>
+                <button class="button brush" id="color-brush" title="Режим рисования"><i class="fa fa-paint-brush"></i> Кисть</button>
             </div>
             <div class="panel-heading edit">
                 Добавить
