--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="items"></div>
             <div class="panel-block bottom">
-                <button class="button is-link is-outlined is-fullwidth close-proj" disabled>
+                <button class="button is-link is-outlined is-fullwidth close-proj">
                     Снять выделение
                 </button>
             </div>
