Add a button to convert base to newHash format

--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
                 <button class="button" id="page-import" title="Импортировать страницу"><i class="fa fa-sign-in"></i> Импорт</button>
                 <button class="button" id="page-export" title="Экспортировать страницу"><i class="fa fa-sign-out"></i> Экспорт</button>
             </div>
+            <div class="panel-heading edit">
+                Другое
+            </div>
+            <div class="buttons edit">
+                <button class="button" id="update-base" title="Обновить базу до последней версии"><i class="fa fa-refresh"></i> Обновить базу до v1.5.1+</button>
+            </div>
         </div>
     </nav>
 </div>
