Make paths platform-independent, add button to flush cached pages

--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                 Другое
             </div>
             <div class="buttons edit">
-                <button class="button" id="update-base" title="Обновить базу до последней версии"><i class="fa fa-refresh"></i> Обновить базу до v1.5.1+</button>
+                <button class="button" id="flush-cache" title="Очистить кеш сохраненных страниц"><i class="fa fa-eraser"></i> Очистить кеш страниц</button>
+                <button class="button" id="update-base" title="Обновить базу до последней версии"><i class="fa fa-refresh"></i> Исправить базу (<1.5.1)</button>
             </div>
         </div>
     </nav>
