If folder exists when importing a page, don't ask for it

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
             <div class="buttons edit">
                 <button class="button" id="flush-cache" title="Очистить кеш сохраненных страниц"><i class="fa fa-eraser"></i> Очистить кеш страниц</button>
-                <button class="button" id="update-base" title="Обновить базу до последней версии"><i class="fa fa-refresh"></i> Исправить базу (<1.5.1)</button>
+                <button class="button" id="update-base" title="Обновить базу до последней версии"><i class="fa fa-medkit"></i> Исправить базу (<1.5.1)</button>
             </div>
         </div>
     </nav>
