Batch export all pages to json

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
             <div class="buttons edit color">
                 <button class="button" id="color-choose" title="Выбрать цвет"><i class="fa fa-delicious"></i> Цвет</button>
-                <button class="button apply" id="color-apply" title="Применить цвет к выделенным"><i class="fa fa-check"></i></button>
+                <button class="button apply" id="color-apply" title="Применить цвет (Ctrl+D)"><i class="fa fa-check"></i></button>
                 <button class="button brush" id="color-brush" title="Режим рисования"><i class="fa fa-paint-brush"></i> Кисть</button>
             </div>
             <div class="panel-heading edit">
@@ -136,9 +136,10 @@
             </div>
             <div class="buttons edit">
                 <button class="button" id="remove-main" title="Очистить страницу"><i class="fa fa-window-close-o"></i> Удалить</button>
-                <button class="button" id="save-all" title="Сохранить изменения"><i class="fa fa-floppy-o"></i> Сохранить</button>
-                <button class="button" id="page-import" title="Импортировать страницу"><i class="fa fa-sign-in"></i> Импорт</button>
-                <button class="button" id="page-export" title="Экспортировать страницу"><i class="fa fa-sign-out"></i> Экспорт</button>
+                <button class="button" id="save-all" title="Сохранить изменения (Ctrl+S)"><i class="fa fa-floppy-o"></i> Сохранить</button>
+                <button class="button" id="page-import" title="Импортировать страницы"><i class="fa fa-sign-in"></i> Импорт</button>
+                <button class="button" id="page-export" title="Экспортировать активную страницу"><i class="fa fa-sign-out"></i> Экспорт</button>
+                <button class="button" id="batch-export" title="Экспортировать все страницы"><i class="fa fa-upload"></i> Экспорт всех страниц</button>
             </div>
             <div class="panel-heading edit">
                 Другое
@@ -187,7 +188,7 @@
                     <li>Поддерживаемые <b>форматы аудио</b>:<br>MP3, MPEG, OPUS, OGG, OGA, WAV, AAC, CAF, M4A, MP4, WEBA, WEBM, DOLBY, FLAC</li>
                 </ul>
 
-                <h3>Глобальные сочетания клавиш</h3>
+                <h3>Управление</h3>
                 <ul>
                     <li><b>Пробел</b> — войти в режим редактирования
                     <li><b>Ctrl+S</b> — сохранить базу вручную
