--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <li><b>Страница</b> — главная область по центру (с сеткой в режиме редактирования)
                     <li><b>Проект</b> — набор страниц
                     <li><b>Блок</b> — прямоугольник с текстом, соответствующий звуку
-                    <li><b>Таб</b> — заголовок страницы вверху экрана (для переключения)
+                    <li><b>Таб</b> — вкладка, заголовок страницы вверху экрана (для переключения)
                     <li><b>Колода</b> — правая панель с добавленными, но не размещенными на странице звуками
                     <li><b>Навигатор</b> — левая панель со списком страниц и проектов
                     <li><b>PPv2</b> — Prank Player v2, старый плеер для технопранков (by Pyro)
