Update license, add player description popup

--- a/index.html
+++ b/index.html
@@ -259,5 +259,39 @@
     </div>
 </div>
 
+<div class="modal no-drag" id="info">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+        <header class="modal-card-head">
+            <p class="modal-card-title">Описание</p>
+            <button class="delete" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+            <div class="content">
+                <div class="header"><img class="img" src="static/legends.jpg" alt="Legends"></div>
+                <h2 class="title">Grinch Player v1.5.3</h2>
+                <h4 class="title">версия от 24 августа 2019 года</h4>
+                <h3>Описание</h3>
+                <p>Плеер для технопранков, позволяющий удобно располагать звуки на страницах, объединять их в проекты и многое другое.</p>
+                <p>Использованные технологии: Electron (electron-boilerplate, electron-builder), JavaScript, Node.js, HTML, CSS.</p>
+                <p>Библиотеки: jQuery, jQuery UI, Bulma, Howler.js, HotKeys.js, List.js, Tippy.js, SimpleBar, Jeditable и другие.</p>
+                <p>Разработчик: <b>Nik</b> aka <b>n3tman</b>. Работа была начата 21 июня 2019 года для использования технопранкером ArsenalGrinch и всеми желающими.</p>
+                <h3>Ссылки</h3>
+                <p>Репозиторий на GitHub: <a href="#" class="repository">https://github.com/n3tman/GrinchPlayer</a></p>
+                <p>Лицензия: <b><a href="#" class="license"><img src="static/license.png"> CC BY-NC-SA 4.0</a></b> (обязательны: «Атрибуция», «Некоммерческое использование», «На тех же условиях»)</p>
+                <p>Новые версии: <a href="#" class="releases">https://github.com/n3tman/GrinchPlayer/releases</a></p>
+                <h3>Благодарности</h3>
+                <p><b>ArsenalGrinch</b> — мотивация, идеи, тестирование</p>
+                <p><b>0000maks0000</b> — главный тестировщик и генератор новых идей, автор скринкаста по обучению работы с плеером</p>
+                <p><b>kolay'</b> — тестирование и поиск багов под Linux и Mac OS
+                <p><b>FLeKsO</b> — тестирование и поиск багов
+                <p><b>Pyro</b> aka <b>sowcow</b> — создатель оригинального Prank Player v2, с которого копировался основной функционал
+                <p><b>PranksWood</b> aka <b>TYP808</b> — создатель веб-плеера PrankPlayer, у которого также были подсмотрены некоторые идеи
+                <p><b>Prank.Ru</b> — информационная поддержка (в лице <b>Stakkan</b>) и полезные комментарии в теме на форуме</p>
+            </div>
+        </section>
+    </div>
+</div>
+
 </body>
 </html>
