Improve counting of files, update readme

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <p>Плеер для технопранков, позволяющий удобно располагать звуки на страницах, объединять их в проекты и многое другое.</p>
                 <p>Использованные технологии: Electron (electron-boilerplate, electron-builder), JavaScript, Node.js, HTML, CSS.</p>
                 <p>Библиотеки: jQuery, jQuery UI, Bulma, Howler.js, HotKeys.js, List.js, Tippy.js, SimpleBar, Jeditable и другие.</p>
-                <p>Разработчик: <b>Nik</b> aka <b>n3tman</b>. Работа была начата 21 июня 2019 года для использования технопранкером ArsenalGrinch и всеми желающими.</p>
+                <p>Разработчик: <b>Nik</b> aka <b>n3tman</b>. Работа была начата 21 июня 2019 года для технопранкера ArsenalGrinch и всех желающих.</p>
                 <h3>Ссылки</h3>
                 <p>Репозиторий на GitHub: <a href="#" class="repository">https://github.com/n3tman/GrinchPlayer</a></p>
                 <p>Лицензия: <b><a href="#" class="license"><img src="static/license.png"> CC BY-NC-SA 4.0</a></b> (обязательны: «Атрибуция», «Некоммерческое использование», «На тех же условиях»)</p>
