--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <li><b>Страница</b> — главная область по центру (с сеткой в режиме редактирования)
                     <li><b>Проект</b> — набор страниц
                     <li><b>Блок</b> — прямоугольник с текстом, соответствующий звуку
-                    <li><b>Таб</b> — вкладка, заголовок страницы вверху экрана (для переключения)
+                    <li><b>Вкладка</b> — заголовок страницы вверху экрана (для переключения)
                     <li><b>Колода</b> — правая панель с добавленными, но не размещенными на странице звуками
                     <li><b>Навигатор</b> — левая панель со списком страниц и проектов
                     <li><b>PPv2</b> — Prank Player v2, старый плеер для технопранков (by Pyro)
@@ -193,10 +193,10 @@
                     <li><b>Пробел</b> — войти в режим редактирования
                     <li><b>Ctrl+S</b> — сохранить базу вручную
                     <li><b>+/−</b> или <b>Ctrl+Колесо</b> — зум, масштабирование интерфейса</li>
-                    <li>Цифры <b>1, 2, 3, 4, 5, 6, 7, 8, 9, 0</b> — быстрое переключение табов (1-10)</li>
-                    <li>Буквы <b>q, w, e, r, t, y, u, i, o, p</b> — быстрое переключение табов (11-20)</li>
-                    <li><b>Ctrl+W</b> — закрыть текущий таб
-                    <li><b>Ctrl+Alt+W</b> — закрыть все табы (и снять выделение с проекта)
+                    <li>Цифры <b>1, 2, 3, 4, 5, 6, 7, 8, 9, 0</b> — быстрое переключение вкладок (1-10)</li>
+                    <li>Буквы <b>q, w, e, r, t, y, u, i, o, p</b> — быстрое переключение вкладок (11-20)</li>
+                    <li><b>Ctrl+W</b> — закрыть текущую вкладку
+                    <li><b>Ctrl+Alt+W</b> — закрыть все вкладки (и снять выделение с проекта)
                     <li><b>Правая</b> кнопка на странице (нажать) — пауза или продолжение воспроизведения звука</li>
                     <li><b>Левая</b> кнопка в навигаторе страниц (зажать и перенести на вкладки) — открыть страницу
                     <li><b>Левая</b> кнопка в навигаторе (<b>двойной клик</b>) — открыть страницу или проект</li>
