--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="panel navigator" id="navigator">
         <div class="panel-heading navbar-brand">
             <img class="drag" src="static/icon-64.png" alt="GrinchPlayer">
-            <span class="text is-size-5 drag">GrinchPlayer</span>
+            <span class="text is-size-5 drag">GrinchPlayer v1.6.0</span>
         </div>
         <div class="about"><i class="fa fa-phone-volume"></i>
             Технопранк-плеер by <span class="author">Nik</span>
@@ -268,12 +268,12 @@
         <section class="modal-card-body">
             <div class="content">
                 <div class="header"><img class="img" src="static/legends.jpg" alt="Legends"></div>
-                <h2 class="title">Grinch Player v1.5.3</h2>
-                <h4 class="title">версия от 24 августа 2019 года</h4>
+                <h2 class="title">Grinch Player v1.6.0</h2>
+                <h4 class="title">версия от 29 августа 2019 года</h4>
                 <h3>Описание</h3>
                 <p>Плеер для технопранков, позволяющий удобно располагать звуки на страницах, объединять их в проекты и многое другое.</p>
                 <p>Использованные технологии: Electron (electron-boilerplate, electron-builder), JavaScript, Node.js, HTML, CSS.</p>
-                <p>Библиотеки: jQuery, jQuery UI, Bulma, Howler.js, HotKeys.js, List.js, Tippy.js, SimpleBar, Jeditable и другие.</p>
+                <p>Библиотеки: jQuery, jQuery UI, Bulma, Howler.js, HotKeys.js, List.js, Tippy.js, SimpleBar, Jeditable, Shepherd.js и другие.</p>
                 <p>Разработчик: <b>Nik</b> aka <b>n3tman</b>. Работа была начата 21 июня 2019 года для технопранкера ArsenalGrinch и всех желающих.</p>
                 <h3>Ссылки</h3>
                 <p>Репозиторий на GitHub: <a href="#" class="repository">https://github.com/n3tman/GrinchPlayer</a></p>
