--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="panel navigator" id="navigator">
         <div class="panel-heading navbar-brand">
             <img class="drag" src="static/icon-64.png" alt="GrinchPlayer">
-            <span class="text is-size-5 drag">GrinchPlayer v1.6.0</span>
+            <span class="text is-size-5 drag">GrinchPlayer v1.6.1</span>
         </div>
         <div class="about"><i class="fa fa-phone-volume"></i>
             Технопранк-плеер by <span class="author">Nik</span>
@@ -192,8 +192,7 @@
                     <li><b>Пробел</b> — войти в режим редактирования
                     <li><b>Ctrl+S</b> — сохранить базу вручную
                     <li><b>+/−</b> или <b>Ctrl+Колесо</b> — зум, масштабирование интерфейса</li>
-                    <li>Цифры <b>1, 2, 3, 4, 5, 6, 7, 8, 9, 0</b> — быстрое переключение вкладок (1-10)</li>
-                    <li>Буквы <b>q, w, e, r, t, y, u, i, o, p</b> — быстрое переключение вкладок (11-20)</li>
+                    <li>Цифры и буквы <b>1-5, Й-Е, Ф-П, Я-И</b> — быстрое переключение вкладок (1-20)</li>
                     <li><b>Ctrl+W</b> — закрыть текущую вкладку
                     <li><b>Ctrl+Alt+W</b> — закрыть все вкладки (и снять выделение с проекта)
                     <li><b>Правая</b> кнопка на странице (нажать) — пауза или продолжение воспроизведения звука</li>
@@ -201,6 +200,8 @@
                     <li><b>Левая</b> кнопка в навигаторе (<b>двойной клик</b>) — открыть страницу или проект</li>
                     <li><b>Правая</b> кнопка на звуке в колоде — воспроизвести звук</li>
                     <li><b>Escape</b> — закрыть всплывающее окно, сбросить фильтр в поиске, выйти из режима рисования
+                    <li><b>Ctrl+1</b> — скрыть показать левый сайдбар (навигатор)
+                    <li><b>Ctrl+2</b> — скрыть показать правый сайдбар (колоду)
                 </ul>
 
                 <h3>В режиме воспроизведения</h3>
@@ -268,8 +269,8 @@
         <section class="modal-card-body">
             <div class="content">
                 <div class="header"><img class="img" src="static/legends.jpg" alt="Legends"></div>
-                <h2 class="title">Grinch Player v1.6.0</h2>
-                <h4 class="title">версия от 29 августа 2019 года</h4>
+                <h2 class="title">Grinch Player v1.6.1</h2>
+                <h4 class="title">версия от 14 сентября 2019 года</h4>
                 <h3>Описание</h3>
                 <p>Плеер для технопранков, позволяющий удобно располагать звуки на страницах, объединять их в проекты и многое другое.</p>
                 <p>Использованные технологии: Electron (electron-boilerplate, electron-builder), JavaScript, Node.js, HTML, CSS.</p>
