Quick search html and style

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             <div class="buttons no-drag">
                 <button class="button is-dark" id="tab-actions"><i class="fa fa-chevron-circle-down"></i></button>
             </div>
+            <div class="control quick-search" id="quick-search">
+                <input class="input" type="text" placeholder="Быстрый поиск">
+            </div>
         </div>
     </div>
 
