Fuse search for blocks on current page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <button class="button is-dark" id="tab-actions"><i class="fa fa-chevron-circle-down"></i></button>
             </div>
             <div class="control quick-search" id="quick-search">
-                <input class="input" type="text" placeholder="Быстрый поиск">
+                <input class="input" type="text" placeholder="Поиск на странице">
             </div>
         </div>
     </div>
@@ -198,6 +198,7 @@
                     <li>Цифры и буквы <b>1-5, Й-Е, Ф-П, Я-И</b> — быстрое переключение вкладок (1-20)</li>
                     <li><b>Ctrl+W</b> — закрыть текущую вкладку
                     <li><b>Ctrl+Alt+W</b> — закрыть все вкладки (и снять выделение с проекта)
+                    <li><b>Ctrl+F</b> — быстрый поиск блока на текущей странице
                     <li><b>Правая</b> кнопка на странице (нажать) — пауза или продолжение воспроизведения звука</li>
                     <li><b>Левая</b> кнопка в навигаторе страниц (зажать и перенести на вкладки) — открыть страницу
                     <li><b>Левая</b> кнопка в навигаторе (<b>двойной клик</b>) — открыть страницу или проект</li>
