--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="panel navigator" id="navigator">
         <div class="panel-heading navbar-brand">
             <img class="drag" src="static/icon-64.png" alt="GrinchPlayer">
-            <span class="text is-size-5 drag">GrinchPlayer v1.6.1</span>
+            <span class="text is-size-5 drag">GrinchPlayer v1.6.2</span>
         </div>
         <div class="about"><i class="fa fa-phone-volume"></i>
             Технопранк-плеер by <span class="author">Nik</span>
@@ -273,8 +273,8 @@
         <section class="modal-card-body">
             <div class="content">
                 <div class="header"><img class="img" src="static/legends.jpg" alt="Legends"></div>
-                <h2 class="title">Grinch Player v1.6.1</h2>
-                <h4 class="title">версия от 14 сентября 2019 года</h4>
+                <h2 class="title">Grinch Player v1.6.2</h2>
+                <h4 class="title">версия от 3 января 2020 года</h4>
                 <h3>Описание</h3>
                 <p>Плеер для технопранков, позволяющий удобно располагать звуки на страницах, объединять их в проекты и многое другое.</p>
                 <p>Использованные технологии: Electron (electron-boilerplate, electron-builder), JavaScript, Node.js, HTML, CSS.</p>
