Move flush cache button to settings

--- a/index.html
+++ b/index.html
@@ -138,17 +138,11 @@
                 Страница
             </div>
             <div class="buttons edit">
-                <button class="button" id="remove-main" title="Очистить страницу"><i class="fa fa-window-close-o"></i> Удалить</button>
+                <button class="button" id="remove-main" title="Переместить все блоки в колоду"><i class="fa fa-window-close-o"></i> Очистить</button>
                 <button class="button" id="save-all" title="Сохранить изменения (Ctrl+S)"><i class="fa fa-floppy-o"></i> Сохранить</button>
                 <button class="button" id="page-import" title="Импортировать страницы"><i class="fa fa-sign-in"></i> Импорт</button>
                 <button class="button" id="page-export" title="Экспортировать активную страницу"><i class="fa fa-sign-out"></i> Экспорт</button>
                 <button class="button" id="batch-export" title="Экспортировать все страницы"><i class="fa fa-upload"></i> Экспорт всех страниц</button>
-            </div>
-            <div class="panel-heading edit">
-                Другое
-            </div>
-            <div class="buttons edit">
-                <button class="button" id="flush-cache" title="Очистить кеш сохраненных страниц"><i class="fa fa-eraser"></i> Очистить кеш страниц</button>
             </div>
         </div>
     </nav>
