Add info tooltips for deck and pages

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class="buttons edit color">
                 <button class="button" id="color-choose" title="Выбрать цвет"><i class="fa fa-delicious"></i> Цвет</button>
-                <button class="button apply" id="color-apply" title="Применить цвет (Ctrl+D)"><i class="fa fa-check"></i></button>
+                <button class="button apply" id="color-apply" title="Применить цвет к выделенным (Ctrl+D)"><i class="fa fa-check"></i></button>
                 <button class="button brush" id="color-brush" title="Режим рисования"><i class="fa fa-paint-brush"></i> Кисть</button>
             </div>
             <div class="panel-heading edit">
@@ -216,6 +216,7 @@
                     <li><b>Shift+Левая</b> кнопка на странице или в колоде (зажать и двигать) — выделение</li>
                     <li><b>Delete</b> — удаление выделенных звуков (в колоду или из базы)</li>
                     <li><b>Левая</b> кнопка на звуке в колоде (<b>двойной клик</b>) — добавить звук в пустое место</li>
+                    <li><b>Правая</b> кнопка на вкладке или названии проекта — переименовать</li>
                     <li><b>Alt+S</b> — сохранить вкладки в текущий проект
                     <li><b>Shift+Alt+S</b> — сохранить вкладки как новый проект
                     <li><b>Ctrl+C</b> — скопировать звуки со страницы или из колоды
