--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <h4 class="title">версия от 4 января 2020 года</h4>
                 <h3>Описание</h3>
                 <p>Плеер для технопранков, позволяющий удобно располагать звуки на страницах, объединять их в проекты и многое другое.</p>
-                <p>Использованные технологии: Electron (electron-boilerplate, electron-builder), JavaScript, Node.js, HTML, CSS.</p>
+                <p>Использованные технологии: JavaScript, HTML, CSS, Electron.</p>
                 <p>Библиотеки: jQuery, jQuery UI, Bulma, Howler.js, HotKeys.js, List.js, Tippy.js, SimpleBar, Jeditable, Shepherd.js и другие.</p>
                 <p>Разработчик: <b>Nik</b> aka <b>n3tman</b>. Работа была начата 21 июня 2019 года для технопранкера ArsenalGrinch и всех желающих.</p>
                 <h3>Ссылки</h3>
