Show folder names for block tips, add button to show file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="panel navigator" id="navigator">
         <div class="panel-heading navbar-brand">
             <img class="drag" src="static/icon-64.png" alt="GrinchPlayer">
-            <span class="text is-size-5 drag">GrinchPlayer v1.6.3</span>
+            <span class="text is-size-5 drag">GrinchPlayer v1.6.4</span>
         </div>
         <div class="about"><i class="fa fa-phone-volume"></i>
             Технопранк-плеер by <span class="author">Nik</span>
@@ -200,6 +200,8 @@
                     <li><b>Escape</b> — закрыть всплывающее окно, сбросить фильтр в поиске, выйти из режима рисования
                     <li><b>Ctrl+1</b> — скрыть показать левый сайдбар (навигатор)
                     <li><b>Ctrl+2</b> — скрыть показать правый сайдбар (колоду)
+                    <li><b>Ctrl+Q</b> — включить/выключить информационные подсказки (блоки/страницы)
+                    <li><b>Ctrl+A</b> — включить/выключить информационную подсветку (блоки/страницы)
                 </ul>
 
                 <h3>В режиме воспроизведения</h3>
@@ -268,8 +270,8 @@
         <section class="modal-card-body">
             <div class="content">
                 <div class="header"><img class="img" src="static/legends.jpg" alt="Legends"></div>
-                <h2 class="title">Grinch Player v1.6.3</h2>
-                <h4 class="title">версия от 4 января 2020 года</h4>
+                <h2 class="title">Grinch Player v1.6.4</h2>
+                <h4 class="title">версия от 6 января 2020 года</h4>
                 <h3>Описание</h3>
                 <p>Плеер для технопранков, позволяющий удобно располагать звуки на страницах, объединять их в проекты и многое другое.</p>
                 <p>Использованные технологии: JavaScript, HTML, CSS, Electron.</p>
