Make tooltips not interactive, open file location on ctrl+click

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             <div class="content">
                 <h3>Основные понятия</h3>
                 <ul>
+                    <li>Режим <b>воспроизведения</b> — для проигрывания звуков (стандартный)
                     <li>Режим <b>редактирования</b> — позволяет редактировать страницы и блоки
-                    <li>Режим <b>воспроизведения</b> — для проигрывания звуков
                     <li><b>Страница</b> — главная область по центру (с сеткой в режиме редактирования)
                     <li><b>Проект</b> — набор страниц
                     <li><b>Блок</b> — прямоугольник с текстом, соответствующий звуку
@@ -198,10 +198,11 @@
                     <li><b>Левая</b> кнопка в навигаторе (<b>двойной клик</b>) — открыть страницу или проект</li>
                     <li><b>Правая</b> кнопка на звуке в колоде — воспроизвести звук</li>
                     <li><b>Escape</b> — закрыть всплывающее окно, сбросить фильтр в поиске, выйти из режима рисования
-                    <li><b>Ctrl+1</b> — скрыть показать левый сайдбар (навигатор)
-                    <li><b>Ctrl+2</b> — скрыть показать правый сайдбар (колоду)
                     <li><b>Ctrl+Q</b> — включить/выключить информационные подсказки (блоки/страницы)
                     <li><b>Ctrl+A</b> — включить/выключить информационную подсветку (блоки/страницы)
+                    <li><b>Ctrl+Левая</b> кнопка на блоке (нажать) — открыть расположение файла
+                    <li><b>Ctrl+1</b> — скрыть показать левый сайдбар (навигатор)
+                    <li><b>Ctrl+2</b> — скрыть показать правый сайдбар (колоду)
                 </ul>
 
                 <h3>В режиме воспроизведения</h3>
