Pick random hash, copy html of block

--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
             </div>
             <div class="option">
                 Стр.
-                <label class="radio"><input class="bullet" type="radio" name="train-area" checked>текущая</label>
-                <label class="radio"><input class="bullet" type="radio" name="train-area">активные</label>
+                <label class="radio"><input class="bullet" type="radio" name="page-mode" value="1" checked>текущая</label>
+                <label class="radio"><input class="bullet" type="radio" name="page-mode" value="0">активные</label>
             </div>
             <div class="option">
                 Звуки
-                <label class="radio"><input class="bullet" type="radio" name="train-pack" checked>все сразу</label>
-                <label class="radio"><input class="bullet" type="radio" name="train-pack">по 30</label>
+                <label class="radio"><input class="bullet" type="radio" name="sound-mode" value="1" checked>все сразу</label>
+                <label class="radio"><input class="bullet" type="radio" name="sound-mode" value="0">по 30</label>
             </div>
             <div class="option columns is-gapless">
                 <div class="column">
