--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
                     <li><b>Ctrl+C</b> — скопировать звуки со страницы или из колоды
                     <li><b>Ctrl+X</b> — вырезать звуки со страницы или из колоды
                     <li><b>Ctrl+V</b> — вставить звуки на страницу или в колоду
-                    <li><b>Ctrl+D</b> — покрасить выделенные блоки в выбранный цвет
+                    <li><b>Shift+C</b> — использовать выделенные блоки для тренировки (заменить)
+                    <li><b>Shift+D</b> — использовать выделенные блоки для тренировки (добавить)
                 </ul>
 
                 <h3>Добавление файлов/папок из проводника (drag'n'drop)</h3>
