--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="panel navigator" id="navigator">
         <div class="panel-heading navbar-brand">
             <img class="drag" src="static/icon-64.png" alt="GrinchPlayer">
-            <span class="text is-size-5 drag">GrinchPlayer v1.7.1</span>
+            <span class="text is-size-5 drag">GrinchPlayer v1.7.2</span>
         </div>
         <div class="about"><i class="fa fa-phone-volume"></i>
             Технопранк-плеер by <span class="author">Nik</span>
@@ -229,7 +229,7 @@
                     <li><b>Пробел</b> — войти в режим редактирования
                     <li><b>Ctrl+S</b> — сохранить базу вручную
                     <li><b>+/−</b> или <b>Ctrl+Колесо</b> — зум, масштабирование интерфейса</li>
-                    <li>Цифры и буквы <b>1-5, Й-Е, Ф-П, Я-И</b> — быстрое переключение вкладок (1-20)</li>
+                    <li>Цифры и буквы <b>1-7, Й-Г, Ф-О, Я-Ь</b> — быстрое переключение вкладок (1-28)</li>
                     <li><b>Ctrl+W</b> — закрыть текущую вкладку
                     <li><b>Ctrl+Alt+W</b> — закрыть все вкладки (и снять выделение с проекта)
                     <li><b>Ctrl+F</b> — быстрый поиск блока на текущей странице
@@ -312,8 +312,8 @@
         <section class="modal-card-body">
             <div class="content">
                 <div class="header"><img class="img" src="static/legends.jpg" alt="Legends"></div>
-                <h2 class="title">Grinch Player v1.7.1</h2>
-                <h4 class="title">версия от 15 января 2020 года</h4>
+                <h2 class="title">Grinch Player v1.7.2</h2>
+                <h4 class="title">версия от 13 мая 2020 года</h4>
                 <h3>Описание</h3>
                 <p>Плеер для технопранков, позволяющий удобно располагать звуки на страницах, объединять их в проекты и многое другое.</p>
                 <p>Использованные технологии: JavaScript, HTML, CSS, Electron.</p>
